Updates: Creation of Tech Library, Design Library, and Blog

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -62,6 +62,19 @@
           ],
           "type": "sass"
         },
+        "98603266": {
+          "id": "98603266",
+          "path": "images/design-library-hero.png",
+          "output": "images/design-library-hero.png",
+          "name": "design-library-hero.png",
+          "category": "IMAGE",
+          "size": 511676,
+          "type": "png",
+          "initialSize": 511676,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
         "e9a5932f": {
           "id": "e9a5932f",
           "path": "404.php",
@@ -1050,17 +1063,6 @@
           "parents": [],
           "type": "php"
         },
-        "ed8f7dcd": {
-          "id": "ed8f7dcd",
-          "path": "template-ebook-landing-page.php",
-          "output": "template-ebook-landing-page.php",
-          "name": "template-ebook-landing-page.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
         "05d393ba": {
           "id": "05d393ba",
           "path": "portfolio.php",
@@ -1082,22 +1084,6 @@
           "imported": false,
           "parents": [],
           "type": "php"
-        },
-        "0c7b55b5": {
-          "id": "0c7b55b5",
-          "path": "css/style.css",
-          "output": "css/style-dist.css",
-          "name": "style.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
         },
         "a8034bad": {
           "id": "a8034bad",
@@ -1553,17 +1539,6 @@
           "height": 0,
           "width": 0
         },
-        "479cadbb": {
-          "id": "479cadbb",
-          "path": "template-map.php",
-          "output": "template-map.php",
-          "name": "template-map.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
         "a768f280": {
           "id": "a768f280",
           "path": "header-map.php",
@@ -1757,17 +1732,6 @@
           "height": 0,
           "width": 0
         },
-        "e4f98993": {
-          "id": "e4f98993",
-          "path": "template-contact.php",
-          "output": "template-contact.php",
-          "name": "template-contact.php",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "php"
-        },
         "440716ee": {
           "id": "440716ee",
           "path": "images/favicondark.png",
@@ -1882,6 +1846,258 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "5ce58cd0": {
+          "id": "5ce58cd0",
+          "path": "bootstrap-3.3.6-dist/css/bootstrap-theme.css",
+          "output": "bootstrap-3.3.6-dist/css/bootstrap-theme-dist.css",
+          "name": "bootstrap-theme.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "2c9c133f": {
+          "id": "2c9c133f",
+          "path": "bootstrap-3.3.6-dist/css/bootstrap-theme.min.css",
+          "output": "bootstrap-3.3.6-dist/css/bootstrap-theme.min-dist.css",
+          "name": "bootstrap-theme.min.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "6e7b6585": {
+          "id": "6e7b6585",
+          "path": "bootstrap-3.3.6-dist/css/bootstrap.css",
+          "output": "bootstrap-3.3.6-dist/css/bootstrap-dist.css",
+          "name": "bootstrap.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "4bad8d5d": {
+          "id": "4bad8d5d",
+          "path": "bootstrap-3.3.6-dist/css/bootstrap.min.css",
+          "output": "bootstrap-3.3.6-dist/css/bootstrap.min-dist.css",
+          "name": "bootstrap.min.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "58f20c66": {
+          "id": "58f20c66",
+          "path": "bootstrap-3.3.6-dist/js/bootstrap.js",
+          "output": "bootstrap-3.3.6-dist/js/bootstrap-dist.js",
+          "name": "bootstrap.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "b756b49e": {
+          "id": "b756b49e",
+          "path": "bootstrap-3.3.6-dist/js/bootstrap.min.js",
+          "output": "bootstrap-3.3.6-dist/js/bootstrap.min-dist.js",
+          "name": "bootstrap.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "c6a41dce": {
+          "id": "c6a41dce",
+          "path": "bootstrap-3.3.6-dist/js/npm.js",
+          "output": "bootstrap-3.3.6-dist/js/npm-dist.js",
+          "name": "npm.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "7312503e": {
+          "id": "7312503e",
+          "path": "inc/custom-fields-portfolio.php",
+          "output": "inc/custom-fields-portfolio.php",
+          "name": "custom-fields-portfolio.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "d8d6d837": {
+          "id": "d8d6d837",
+          "path": "header-blog.php",
+          "output": "header-blog.php",
+          "name": "header-blog.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "1181b6ed": {
+          "id": "1181b6ed",
+          "path": "images/blog-header-laurenabele.png",
+          "output": "images/blog-header-laurenabele.png",
+          "name": "blog-header-laurenabele.png",
+          "category": "IMAGE",
+          "size": 369259,
+          "type": "png",
+          "initialSize": 369259,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "286aab3a": {
+          "id": "286aab3a",
+          "path": "inc/library-custom-post-type.php",
+          "output": "inc/library-custom-post-type.php",
+          "name": "library-custom-post-type.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "374821db": {
+          "id": "374821db",
+          "path": "page-templates/template-contact.php",
+          "output": "page-templates/template-contact.php",
+          "name": "template-contact.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "7273895c": {
+          "id": "7273895c",
+          "path": "page-templates/template-ebook-landing-page.php",
+          "output": "page-templates/template-ebook-landing-page.php",
+          "name": "template-ebook-landing-page.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "d66ddc0f": {
+          "id": "d66ddc0f",
+          "path": "archive-tech_library.php",
+          "output": "archive-tech_library.php",
+          "name": "archive-tech_library.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "9b147d77": {
+          "id": "9b147d77",
+          "path": "single-tech_library.php",
+          "output": "single-tech_library.php",
+          "name": "single-tech_library.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "369f5110": {
+          "id": "369f5110",
+          "path": "images/tech-library-hero2.png",
+          "output": "images/tech-library-hero2.png",
+          "name": "tech-library-hero2.png",
+          "category": "IMAGE",
+          "size": 547108,
+          "type": "png",
+          "initialSize": 547108,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "a03e0aca": {
+          "id": "a03e0aca",
+          "path": "images/tech-library-hero.png",
+          "output": "images/tech-library-hero.png",
+          "name": "tech-library-hero.png",
+          "category": "IMAGE",
+          "size": 468630,
+          "type": "png",
+          "initialSize": 468630,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2e2485b2": {
+          "id": "2e2485b2",
+          "path": "images/design-library-hero2.png",
+          "output": "images/design-library-hero2.png",
+          "name": "design-library-hero2.png",
+          "category": "IMAGE",
+          "size": 527653,
+          "type": "png",
+          "initialSize": 527653,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "832f6612": {
+          "id": "832f6612",
+          "path": "archive-design_library.php",
+          "output": "archive-design_library.php",
+          "name": "archive-design_library.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
